src/components/postList.module.scss
.list {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.article {
  border-top: 1px solid #eaecf0;
  padding: 3.2rem 0;

  &:first-child {
    border-top: none;
  }
}

.header_meta {
  color: #838e96;
  font-size: 0.9rem;
}

.header_title {
  margin-top: 0.1rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  font-weight: 700;

  a {
    color: #161718;
    text-decoration: none;
  }

  &:hover {
    a {
      color: #161718;
      text-decoration: none;
    }
  }
}

.thumbnail {
  margin: 1.25rem 0;
  img {
    margin: 0 auto;
    border-radius: 4px;
    max-width: 100%;
  }
}

.readMore {
  margin-top: 1.5rem;

  a {
    font-size: 0.8rem;
    font-weight: 500;
    display: inline-block;
    border: 1px solid #e3e5e7;
    border-radius: 5px;
    padding: 4px 15px 5px;
    transition: all 0.2s ease-in-out;

    &:hover {
      color: #077bd1;
      background-color: rgba(7, 123, 209, 0.03);
    }
  }
}

.section {
  font-size: 1.1rem;
  line-height: 1.65rem;
}

@media (min-width: 600px) {
  .header_title {
    font-size: 2rem;
  }
}

@media (min-width: 1000px) {
  .header_title {
    font-size: 2.1rem;
  }
}

@media (min-width: 1200px) {
  .header_title {
    font-size: 2.3rem;
  }
}

